--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chessgame",
   "version": "1.0.0",
-  "description": "",
+  "description": "A real-time chess game application",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "HarshJain",
   "license": "ISC",
@@ -12,7 +12,9 @@
     "chess.js": "^1.0.0-beta.8",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
